tests/NormalTests/paczka1/small_fuzzy/47660263.err
Error in line 3: jK6IKvvQ S446 81,02
Error in line 5: Nmbma S680 62,2
Error in line 13: ksSdxuDTR S7:2 17,0
Error in line 11: boRdCj1112 S762 22,8
